@@ -1,10 +1,10 @@
+Changes
 lib/Acme/CPANAuthors/Booking.pm
 Makefile.PL
 MANIFEST
+README
 t/000_basic.t
 t/950_pod.t
 t/960_pod_coverage.t
-Changes
-README
 META.yml                                 Module YAML meta-data (added by MakeMaker)
 META.json                                Module JSON meta-data (added by MakeMaker)
